Fix the spacing for C and F buttons

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -46,7 +46,7 @@
   line-height: 1;
   position: relative;
   top: -34px;
-  margin-left: 0px;
+  margin-left: 2px;
 }
 
 .number {
